src/snapshots/bl__tests__snapshots__cmd_record__chunk.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Manage recording chunks

Usage: bl record chunk [OPTIONS] [COMMAND]

Commands:
  start  Start a new chunk within the current recording
  stop   Package current chunk into a ZIP file (recording stays active)
  help   Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose   Enable debug logging
      --headless  Hide browser window (visible by default)
      --json      Output as JSON
  -h, --help      Print help
