src/snapshots/bl__tests__snapshots__cmd_record__group.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Manage recording groups

Usage: bl record group [OPTIONS] [COMMAND]

Commands:
  start  Start a named group in the recording
  stop   End the current recording group
  help   Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose   Enable debug logging
      --headless  Hide browser window (visible by default)
      --json      Output as JSON
  -h, --help      Print help
